Fixed footer on small screens.

--- a/resources/styles/contact.css
+++ b/resources/styles/contact.css
@@ -110,9 +110,8 @@ img {
 
 /*v Bottom of Page v*/
 #footer {
-  position: fixed;
+  position: absolute;
   display: block;
-  bottom: 0;
   left: 0;
   right: 0;
   margin: 0 auto;
