--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -111,7 +111,7 @@ body {
 
 /*v Bottom of Page v*/
 #footer {
-  position: fixed;
+  position: absolute;
   display: block;
   bottom: 0;
   left: 0;
